ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
					MagickCache \
          utilities \
          tests

TOP_EXTRA_DIST = \
	INSTALL.md \
	LICENSE \
	README.md \
	SECURITY.md

# Binary scripts
bin_SCRIPTS = \
  MagickCache/MagickCache-config

# Additional files to distribute
EXTRA_DIST = \
	$(TOP_EXTRA_DIST) \
	MagickCache/MagickCache-config.in
